--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="search_button">Search</string>
 
     <!-- Menu -->
+    <string name="home_menu">Home</string>
     <string name="search_current_menu">Search current</string>
     <string name="search_menu">Search</string>
     <string name="settings_menu">Settings</string>
@@ -25,11 +26,8 @@
     <string name="setting_auto_search_label">Auto search</string>
     <string name="setting_auto_search_descr">Automatically search for songs</string>
     <string name="setting_delete_recents_label">Delete recent searches</string>
-    <string name="setting_delete_recents_descr">All the recent searches will be deleted. Warning: cannot undo.</string>
+    <string name="setting_delete_recents_descr">All the recent searches will be deleted\n<b>Warning</b>: cannot undo</string>
     <string name="dialog_delete_recents_title">Delete recent searches</string>
     <string name="dialog_delete_recents_message">Are you sure you want to delete all recent searches?</string>
 
-    <!-- Other -->
-    <string name="ok_up">OK</string>
-    <string name="cancel_up">CANCEL</string>
 </resources>
